format: ruff on notebook

--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "from torchrir.geometry import ConvexRoom\n",
     "import torch\n",
-    "room = ConvexRoom(torch.cartesian_prod(*3*[torch.arange(2,dtype=float)]), 0.6)"
+    "\n",
+    "room = ConvexRoom(torch.cartesian_prod(*3 * [torch.arange(2, dtype=float)]), 0.6)"
    ]
   },
   {
@@ -36,9 +37,9 @@
     "from torchrir.source import Source\n",
     "\n",
     "\n",
-    "source = Source(position=torch.tensor([.8, .8, .8]), intensity=1)\n",
+    "source = Source(position=torch.tensor([0.8, 0.8, 0.8]), intensity=1)\n",
     "\n",
-    "rir = room.compute_rir(p=torch.tensor([0.2,0.2,0.2]), s=source, k=6)"
+    "rir = room.compute_rir(p=torch.tensor([0.2, 0.2, 0.2]), s=source, k=6)"
    ]
   },
   {
@@ -65,10 +66,11 @@
    "source": [
     "import IPython\n",
     "import wave\n",
+    "\n",
     "with wave.open(\"_output.wav\", \"w\") as wf:\n",
     "    wf.setnchannels(1)  # Mono\n",
     "    wf.setsampwidth(2)  # 2 bytes per sample (16-bit PCM)\n",
-    "    wf.setframerate(1/(rir[1][1]-rir[1][0]).numpy())\n",
+    "    wf.setframerate(1 / (rir[1][1] - rir[1][0]).numpy())\n",
     "    wf.writeframes(rir[0].numpy().tobytes())\n",
     "\n",
     "IPython.display.Audio(\"_output.wav\")"
