refactor: major refactor of axis order

--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -15,8 +15,23 @@
    "source": [
     "from torchrir.geometry import ConvexRoom\n",
     "import torch\n",
+    "x_size = 4.5000\n",
+    "y_size = 2.1500\n",
+    "z_size = 4.3000\n",
+    "points = torch.tensor(\n",
+    "    [\n",
+    "        [-x_size, -y_size, -z_size],\n",
+    "        [-x_size, -y_size, z_size],\n",
+    "        [-x_size, y_size, -z_size],\n",
+    "        [-x_size, y_size, z_size],\n",
+    "        [x_size, -y_size, -z_size],\n",
+    "        [x_size, -y_size, z_size],\n",
+    "        [x_size, y_size, -z_size],\n",
+    "        [x_size, y_size, z_size],\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "room = ConvexRoom(torch.cartesian_prod(*3 * [torch.arange(2, dtype=float)]), 0.6)"
+    "shoebox_room = ConvexRoom(points.T, 0.9)"
    ]
   },
   {
@@ -25,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "room.plot()"
+    "shoebox_room.plot(alpha=0.35)"
    ]
   },
   {
@@ -34,12 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torchrir.geometry import ImpulseResponseStrategies\n",
     "from torchrir.source import Source\n",
     "\n",
     "\n",
-    "source = Source(position=torch.tensor([0.8, 0.8, 0.8]), intensity=1)\n",
-    "\n",
-    "rir = room.compute_rir(p=torch.tensor([0.2, 0.2, 0.2]), s=source, k=6)"
+    "source = Source(position=torch.tensor([0.8, 0.8, 0.8]), intensity=2.0)\n",
+    "fs = 48000.0  # Hz\n",
+    "rir = shoebox_room.compute_rir(\n",
+    "    p=torch.tensor([0.2, 0.2, 0.2]),\n",
+    "    s=source,\n",
+    "    k=7,\n",
+    "    fs=fs,\n",
+    "    impulse_response_fn=ImpulseResponseStrategies.sinc,\n",
+    ")"
    ]
   },
   {
@@ -51,7 +73,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.plot(rir[1], rir[0])\n",
-    "plt.xlim([0, 0.1])"
+    "plt.xlim([0, 1])"
    ]
   },
   {
