--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "x_size = 4.5000\n",
     "y_size = 2.1500\n",
-    "z_size = 4.3000\n",
+    "z_size = 3.3000\n",
     "points = torch.tensor(\n",
     "    [\n",
     "        [-x_size, -y_size, -z_size],\n",
@@ -59,7 +59,7 @@
     "rir = shoebox_room.compute_rir(\n",
     "    p=torch.tensor([0.2, 0.2, 0.2]),\n",
     "    s=source,\n",
-    "    k=7,\n",
+    "    k=8,\n",
     "    fs=fs,\n",
     "    impulse_response_fn=ImpulseResponseStrategies.sinc,\n",
     ")"
@@ -72,9 +72,23 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import scipy\n",
     "\n",
+    "fig = plt.figure(figsize=(10, 5))\n",
+    "plt.subplot(1, 2, 1)\n",
     "plt.plot(rir[1], rir[0])\n",
-    "plt.xlim([0, 1])"
+    "plt.xlim([0, 1])\n",
+    "plt.xlabel(\"Time (s)\")\n",
+    "plt.ylabel(\"Amplitude\")\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "H = abs(scipy.fft.fft(rir[0]))\n",
+    "f = scipy.fft.fftfreq(len(H), 1 / fs)\n",
+    "plt.loglog(f, H)\n",
+    "plt.xlim([1, fs / 2])\n",
+    "plt.xlabel(\"Frequency (Hz)\")\n",
+    "plt.ylabel(\"Magnitude\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
