--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -126,11 +126,20 @@
     "plt.subplot(1, 2, 2)\n",
     "H = abs(scipy.fft.fft(rir[0].numpy()))\n",
     "f = scipy.fft.fftfreq(len(H), 1 / fs)\n",
-    "plt.loglog(f, H)\n",
+    "plt.semilogx(f[:len(f)//2], H[:len(f)//2])\n",
     "plt.xlim([1, fs / 2])\n",
     "plt.xlabel(\"Frequency (Hz)\")\n",
     "plt.ylabel(\"Magnitude\")\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H"
    ]
   },
   {
