feature: visibility in convex room

--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -21,6 +21,9 @@
     "from torchrir.geometry import ConvexRoom\n",
     "import torch\n",
     "\n",
+    "torch.set_default_device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "torch.set_default_dtype(torch.float64)\n",
+    "\n",
     "x_size = 4.5000\n",
     "y_size = 2.1500\n",
     "z_size = 3.3000\n",
@@ -34,7 +37,7 @@
     "        [x_size, -y_size, z_size],\n",
     "        [x_size, y_size, -z_size],\n",
     "        [x_size, y_size, z_size],\n",
-    "    ]\n",
+    "    ],\n",
     ")\n",
     "\n",
     "shoebox_room = ConvexRoom(points.T, 0.9)"
@@ -90,7 +93,7 @@
    "source": [
     "from torchrir.geometry import ImpulseResponseStrategies\n",
     "\n",
-    "fs = 48000.0  # Hz\n",
+    "fs = 28000.0  # Hz\n",
     "rir = shoebox_room.compute_rir(\n",
     "    p=torch.tensor([0.2, 0.2, 0.2]),  # receiver position\n",
     "    s=source,\n",
@@ -116,6 +119,8 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "\n",
+    "\n",
+    "rir = [_.cpu() for _ in rir]  # move to CPU for plotting\n",
     "fig = plt.figure(figsize=(10, 5))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(rir[1], rir[0])\n",
@@ -131,15 +136,6 @@
     "plt.xlabel(\"Frequency (Hz)\")\n",
     "plt.ylabel(\"Magnitude\")\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H"
    ]
   },
   {
@@ -166,7 +162,7 @@
     "    wf.setnchannels(1)  # Mono\n",
     "    wf.setsampwidth(2)  # 2 bytes per sample (16-bit PCM)\n",
     "    wf.setframerate(1 / (rir[1][1] - rir[1][0]).numpy())\n",
-    "    wf.writeframes(rir[0].numpy().tobytes())\n",
+    "    wf.writeframes((rir[0].numpy() * 32767).astype(\"int16\").tobytes())\n",
     "\n",
     "IPython.display.Audio(\"_output.wav\")"
    ]
