style: ruff format

--- a/docs/source/guides/random_rays.ipynb
+++ b/docs/source/guides/random_rays.ipynb
@@ -25,12 +25,13 @@
     "import torch\n",
     "from torchrir.source import Source\n",
     "from torchrir.geometry import Ray\n",
+    "\n",
     "source = Source(position=torch.tensor([0.0, 0.0, 0.0]))\n",
     "r: Ray = source.sample_rays(shape=(100,))\n",
-    " \n",
+    "\n",
     "fig = plt.figure()\n",
     "fig, ax = r.plot()\n",
-    "ax.set_box_aspect((1, 1, 1))\n"
+    "ax.set_box_aspect((1, 1, 1))"
    ]
   },
   {
@@ -67,7 +68,7 @@
     "fig, ax = r.plot()\n",
     "fig, ax = r_that_intersects.plot(fig=fig)\n",
     "ax.set_box_aspect((1, 1, 1))\n",
-    "p.plot(ax=ax, color='red', alpha=0.5)"
+    "p.plot(ax=ax, color=\"red\", alpha=0.5)"
    ]
   }
  ],
