docs: small enhancements in random_rays and api

--- a/docs/source/guides/random_rays.ipynb
+++ b/docs/source/guides/random_rays.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# Random ray tracing visualization\n",
     "\n",
+    "{download}`Download this page as a notebook 🗎 </guides/random_rays.ipynb>`.\n",
+    "\n",
+    "\n",
     "Here a few examples of random ray tracing visualizations using the torchRIR package are given.\n",
     "\n",
     "## Random rays on a sphere\n",
