fix: output audio in convex_room ipynb

--- a/docs/source/guides/convex_room.ipynb
+++ b/docs/source/guides/convex_room.ipynb
@@ -156,13 +156,13 @@
    "outputs": [],
    "source": [
     "import IPython\n",
-    "import wave\n",
+    "from scipy.io import wavfile\n",
     "\n",
-    "with wave.open(\"_output.wav\", \"w\") as wf:\n",
-    "    wf.setnchannels(1)  # Mono\n",
-    "    wf.setsampwidth(2)  # 2 bytes per sample (16-bit PCM)\n",
-    "    wf.setframerate(1 / (rir[1][1] - rir[1][0]).numpy())\n",
-    "    wf.writeframes((rir[0].numpy() * 32767).astype(\"int16\").tobytes())\n",
+    "INT16_MAX = 32767\n",
+    "\n",
+    "x_int16 = (rir[0] * INT16_MAX).to(torch.int16).numpy()\n",
+    "fs = (1 / (rir[1][1] - rir[1][0])).item()\n",
+    "wavfile.write(\"_output.wav\", int(fs), x_int16)\n",
     "\n",
     "IPython.display.Audio(\"_output.wav\")"
    ]
